--- a/css/new-sections.css
+++ b/css/new-sections.css
@@ -49,9 +49,9 @@
 }
 
 .about-content h2 {
-    font-family: 'Playfair Display SemiBold', serif;
-    font-weight: 600;
-    font-style: italic;
+    font-family: 'TheSilverEditorial', serif;
+    font-weight: normal;
+    font-style: normal;
     font-size: 42px;
     color: #000B39;
     margin-bottom: 25px;
